# sfst-transduce

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: pip.yml  publish.yml  test.yml  wheels.yml
python/: CMakeLists.txt  pybind11.cmake  sfst.cpp  sfst_transduce.cpp
python/tests/: easy.ca  test.py
scripts/: release
sfst_transduce/: __init__.pyi
src/: CMakeLists.txt
tests/: fixtures.py  test_transducers.py
