[metadata]
name = sfst-transduce
version = file: VERSION
author = Gregor Middell
author_email = gregor.middell@bbaw.de
project_urls =
    Homepage = https://github.com/gremid/sfst-transduce
    Repository = https://github.com/gremid/sfst-transduce.git
description = Python bindings for SFST focusing on transducer usage
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = GNU GPL2
license_files = LICENSE
keywords =
    Finite-state Transducer
    Morphological Analysis
    Natural Language Processing
    NLP
    SFST
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic

[options]
python_requires = >=3.6
